[gd_scene load_steps=6 format=3 uid="uid://qixmlwdq13oo"]

[ext_resource type="Script" uid="uid://bh4vnepqmv2ns" path="res://addons/librarian/ui/elements/tag_selection.gd" id="1_ipnfh"]
[ext_resource type="Texture2D" uid="uid://beulvp2o75ynk" path="res://addons/librarian/res/icons/godot/Search.svg" id="2_ct3jg"]
[ext_resource type="Texture2D" uid="uid://cbx145cvfpxhx" path="res://addons/librarian/res/icons/godot/Close.svg" id="2_ipnfh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipnfh"]

[sub_resource type="Theme" id="Theme_ct3jg"]
PanelContainer/styles/panel = SubResource("StyleBoxEmpty_ipnfh")

[node name="TagSelection" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_ct3jg")
script = ExtResource("1_ipnfh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply tags to this entry"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_ipnfh")

[node name="Filter" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Filter tags"
right_icon = ExtResource("2_ct3jg")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Selected tags"

[node name="SelectedTags" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Other tags"

[node name="OtherTags" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/Filter" to="." method="_on_filter_text_changed"]
